pref: Reviewed to rclone

--- a/mysql/.env
+++ b/mysql/.env
@@ -4,6 +4,6 @@ SERV_PORT=3306
 
 MYSQL_DATABASE=example
 MYSQL_PASSWORD=example
-# MYSQL_ROOT_PASSWORD=123456
+MYSQL_ROOT_PASSWORD=123456
 MYSQL_USER=example
 MYSQL_RANDOM_ROOT_PASSWORD=1
