--- a/open-webui/.env
+++ b/open-webui/.env
@@ -1,6 +1,6 @@
-OLLAMA_BASE_URL=http://ollama:11434
-WEBUI_SECRET_KEY=
-
 # CUSTOM
 TZ=Asia/Shanghai
-SERV_PORT=127.0.0.1:8080
+SERV_PORT=8080
+
+OPENAI_API_KEY=
+WEBUI_SECRET_KEY=
