--- a/openssh-server/.env
+++ b/openssh-server/.env
@@ -1,3 +1,12 @@
+# CUSTOM
+TZ=Asia/Shanghai
+SERV_PORT=2222
+
+PUID=0
+PGID=0
+SUDO_ACCESS=true
+USER_NAME=jetsung
+
 # PUID="1000"
 # PGID="1000"
 # PUBLIC_KEY="yourpublickey"
@@ -10,12 +19,3 @@
 # USER_PASSWORD_FILE="/path/to/file"
 # USER_NAME="jetsung"
 # LOG_STDOUT=""
-
-# CUSTOM
-TZ=Asia/Shanghai
-SERV_PORT=2222
-
-PUID="0"
-PGID="0"
-SUDO_ACCESS="true"
-USER_NAME="jetsung"
