--- a/open-webui/compose.override.yaml
+++ b/open-webui/compose.override.yaml
@@ -2,3 +2,18 @@ services:
   webui:
     ports: !override
       - ${SERV_PORT:-8080}:8080
+    volumes:
+      - ./data/backend:/app/backend/data
+
+  server:
+    ports: !override
+      - ${SERV_PORT:-8080}:8080
+    volumes:
+      - ./data/backend:/app/backend/data
+
+  container:
+    ports: !override
+      - ${SERV_PORT:-8080}:8080
+    volumes:
+      - ./data/backend:/app/backend/data
+      - ./data/ollama:/root/.ollama
