--- a/open-webui/compose.yaml
+++ b/open-webui/compose.yaml
@@ -1,16 +1,41 @@
 ---
 # https://github.com/orgs/open-webui/packages/container/package/open-webui
 
+x-webui-common: &webui-common
+  image: ghcr.io/open-webui/open-webui:${DOCKER_TAG:-main}
+  container_name: webui
+  privileged: false
+  restart: unless-stopped
+  env_file:
+    - path: ./.env
+      required: false
+  ports:
+    - 8080:8080
+
 services:
+  # Ollama 宿主机模式
   webui:
-    image: ghcr.io/open-webui/open-webui:${DOCKER_TAG:-main}
-    container_name: webui
-    privileged: false
-    restart: unless-stopped
-    env_file:
-      - path: ./.env
-        required: false
-    volumes:
-      - ./data:/app/backend/data
-    ports:
-      - 8080:8080
+    <<: *webui-common
+    environment:
+      OLLAMA_BASE_URL: http://host.docker.internal:11434
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    profiles:
+      - webui
+
+  # Ollama 独立模式
+  server:
+    <<: *webui-common
+    environment:
+      OLLAMA_BASE_URL: http://example.com
+    profiles:
+      - server
+
+  # Ollama 容器模式
+  container:
+    <<: *webui-common
+    image: ghcr.io/open-webui/open-webui:ollama
+    environment:
+      OLLAMA_BASE_URL: http://localhost:11434
+    profiles:
+      - container
