--- a/openssh-server/compose.yaml
+++ b/openssh-server/compose.yaml
@@ -1,8 +1,8 @@
 ---
-
 # https://hub.docker.com/r/linuxserver/openssh-server
+
 services:
-  openssh-server:
+  server:
     image: linuxserver/openssh-server:latest
     container_name: openssh-server
     hostname: openssh-server
@@ -12,5 +12,3 @@ services:
         required: false
     ports:
       - 2222:2222
-    volumes:
-      - ./data:/config
