--- a/pgadmin/.env
+++ b/pgadmin/.env
@@ -1,6 +1,19 @@
-PGADMIN_DEFAULT_EMAIL=user@domain.com
-PGADMIN_DEFAULT_PASSWORD=SuperSecret
-
 # CUSTOM
 TZ=Asia/Shanghai
 SERV_PORT=80
+
+PGADMIN_DEFAULT_EMAIL=user@domain.com
+PGADMIN_DEFAULT_PASSWORD=SuperSecret
+PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION=True
+# PGADMIN_CONFIG_LOGIN_BANNER="Authorised users only!"
+PGADMIN_CONFIG_CONSOLE_LOG_LEVEL=10
+# Number of values to trust for X-Forwarded-For
+PROXY_X_FOR_COUNT = 1
+# # Number of values to trust for X-Forwarded-Proto.
+PROXY_X_PROTO_COUNT = 1
+# # Number of values to trust for X-Forwarded-Host.
+PROXY_X_HOST_COUNT = 1
+# # Number of values to trust for X-Forwarded-Port.
+# PROXY_X_PORT_COUNT = 1
+# # Number of values to trust for X-Forwarded-Prefix.
+# PROXY_X_PREFIX_COUNT = 0
