pref: Reviewed finish

--- a/remark42/.env
+++ b/remark42/.env
@@ -1,13 +1,17 @@
+# CUSTOM
+TZ=Asia/Shanghai
+SERV_PORT=8080
+
 DEBUG=true
 
-AUTH_GOOGLE_CID=
-AUTH_GOOGLE_CSEC=
-AUTH_GITHUB_CID=
-AUTH_GITHUB_CSEC=
-AUTH_FACEBOOK_CID=
-AUTH_FACEBOOK_CSEC=
-AUTH_DISQUS_CID=
-AUTH_DISQUS_CSEC=
+# AUTH_GOOGLE_CID=
+# AUTH_GOOGLE_CSEC=
+# AUTH_GITHUB_CID=
+# AUTH_GITHUB_CSEC=
+# AUTH_FACEBOOK_CID=
+# AUTH_FACEBOOK_CSEC=
+# AUTH_DISQUS_CID=
+# AUTH_DISQUS_CSEC=
 
 #SMTP_HOST=smtp.gmail.com
 #SMTP_PORT=465
@@ -17,11 +21,7 @@ AUTH_DISQUS_CSEC=
 #AUTH_EMAIL_FROM=example.user@gmail.com
 #NOTIFY_EMAIL_FROM=example.user@gmail.com
 
-SITE=
-REMARK_URL=
-SECRET=
-ADMIN_PASSWD=
-
-# CUSTOM
-TZ=Asia/Shanghai
-SERV_PORT=8080
+# SITE=
+REMARK_URL=http://0.0.0.0:8080
+SECRET=your_secret_key
+ADMIN_PASSWD=admin888
