--- a/remark42/compose.yaml
+++ b/remark42/compose.yaml
@@ -5,15 +5,13 @@ services:
   remark:
     image: umputun/remark42:latest
     container_name: remark42
+    hostname: remark42
     restart: unless-stopped
     env_file:
       - path: ./.env
         required: false
-    volumes:
-      - ./data:/srv/var
     ports:
       - 8080:8080
-
     logging:
       driver: json-file
       options:
