--- a/rustpad/.env
+++ b/rustpad/.env
@@ -1,7 +1,8 @@
-RUST_LOG=error
-EXPIRY_DAYS=180
-SQLITE_URI=/app/rustpad.sqlite
-
 # CUSTOM
 TZ=Asia/Shanghai
 SERV_PORT=3030
+SERV_PORT=8080
+
+RUST_LOG=error
+EXPIRY_DAYS=180
+SQLITE_URI=/app/rustpad.sqlite
