--- a/simple-http-server/compose.yaml
+++ b/simple-http-server/compose.yaml
@@ -4,12 +4,12 @@
 services:
   simple-http-server:
     image: ghcr.io/forkdo/simple-http-server:latest
+    container_name: simple-http-server
+    hostname: simple-http-server
     restart: unless-stopped
     env_file:
       - path: ./.env
         required: false
-    volumes:
-      - ./data/html:/var/www/html
     ports:
       - 8000:8000
-    command: [--index]
+    command: ["--index"]
