--- a/stalwart/.env
+++ b/stalwart/.env
@@ -1,15 +1,13 @@
-HTTP_PORT=8080
-HTTPS_PORT=10443
-SMTP_PORT=10025
-SMTPSSL_PORT=10465
-SMTPTLS_PORT=10587
-IMAP_PORT=10143
-IMAPS_PORT=10993
-POP3_PORT=10110
-POP3S_PORT=10995
-
-DEFAULT_DOMAIN=example.com
-BASE_PATH=/opt/stalwart-mail
-
 # CUSTOM
 TZ=Asia/Shanghai
+
+HTTPS_PORT=10443
+HTTP_PORT=8080
+SMTP_PORT=25
+SMTPTLS_PORT=587
+SMTPSSL_PORT=465
+IMAP_PORT=143
+IMAPS_PORT=993
+SIEVE_PORT=4190
+POP3_PORT=110
+POP3S_PORT=995
