--- a/syncthing/compose.yaml
+++ b/syncthing/compose.yaml
@@ -5,6 +5,7 @@ services:
   syncthing:
     image: syncthing/syncthing:latest
     container_name: syncthing
+    hostname: syncthing
     restart: unless-stopped
     env_file:
       - path: ./.env
@@ -14,5 +15,3 @@ services:
       - 22000:22000/tcp       # TCP file transfers
       - 22000:22000/udp       # QUIC file transfers
       - 21027:21027/udp       # Receive local discovery broadcasts
-    volumes:
-      - ./syncthing:/var/syncthing
