--- a/transfer/.env
+++ b/transfer/.env
@@ -1,3 +1,73 @@
 # CUSTOM
 TZ=Asia/Shanghai
 SERV_PORT=8080
+
+# # === 监听配置 ===
+# LISTENER=:8080
+# PROFILE_LISTENER=localhost:6060
+
+# # === HTTPS / TLS ===
+# FORCE_HTTPS=false
+# TLS_LISTENER=
+# TLS_LISTENER_ONLY=false
+# TLS_CERT_FILE=
+# TLS_PRIVATE_KEY=
+# USE_LETS_ENCRYPT=false
+# HOSTS=               # 对应 lets-encrypt-hosts
+# TLS_CERT_PATH=./certs
+
+# # === 认证与安全 ===
+# HTTP_AUTH_USER=
+# HTTP_AUTH_PASS=
+# HTTP_AUTH_HTPASSWD=
+# HTTP_AUTH_IP_WHITELIST=
+# IP_WHITELIST=
+# IP_BLACKLIST=
+
+# # === 存储后端 ===
+PROVIDER=local
+BASEDIR=/uploads
+
+# # -- S3 --
+# AWS_ACCESS_KEY=
+# AWS_SECRET_KEY=
+# BUCKET=
+# S3_ENDPOINT=
+# S3_REGION=eu-west-1
+# S3_NO_MULTIPART=false
+# S3_PATH_STYLE=false
+
+# # -- Storj --
+# STORJ_ACCESS=
+# STORJ_BUCKET=
+
+# # -- Google Drive --
+# GDRIVE_CLIENT_JSON_FILEPATH=
+# GDRIVE_LOCAL_CONFIG_PATH=
+# GDRIVE_CHUNK_SIZE=8
+
+# # === 文件与限制 ===
+# TEMP_PATH=/tmp
+# MAX_UPLOAD_SIZE=1048576        # 单位：KB（1GB = 1048576 KB）
+# MAX_UPLOADS=10
+# RATE_LIMIT=100                 # 每分钟请求数
+# PURGE_DAYS=14
+# PURGE_INTERVAL=24              # 单位：小时
+# RANDOM_TOKEN_LENGTH=6
+
+# # === 病毒扫描 ===
+# CLAMAV_HOST=
+# PERFORM_CLAMAV_PRESCAN=false
+# VIRUSTOTAL_KEY=
+
+# # === Web 前端与 CORS ===
+# WEB_PATH=
+# PROXY_PATH=
+# PROXY_PORT=
+# EMAIL_CONTACT=
+# GA_KEY=
+# USERVOICE_KEY=
+# CORS_DOMAINS=
+
+# # === 日志 ===
+# LOG=
