--- a/vaultwarden-backup/.env
+++ b/vaultwarden-backup/.env
@@ -9,3 +9,39 @@ PING_URL=""
 B2_REMOTE_NAME=""
 B2_REMOTE_DIR=""
 CRON="35 * * * *"
+
+# # === Rclone 配置 ===
+# RCLONE_REMOTE_NAME=BitwardenBackup
+# RCLONE_REMOTE_DIR=/BitwardenBackup/
+# RCLONE_GLOBAL_FLAG=
+
+# # === 备份调度与格式 ===
+# CRON=5 * * * *
+# ZIP_ENABLE=TRUE
+# ZIP_PASSWORD=WHEREISMYPASSWORD?
+# ZIP_TYPE=zip
+# BACKUP_KEEP_DAYS=0
+# BACKUP_FILE_SUFFIX=%Y%m%d
+# TIMEZONE=UTC
+# DISPLAY_NAME=vaultwarden
+
+# # === 数据目录（自动备份时通常设为 /data）===
+# DATA_DIR=/bitwarden/data
+
+# === Ping 通知（可选）===
+# PING_URL=https://hc-ping.com/your-uuid
+# PING_URL_WHEN_START=
+# PING_URL_WHEN_SUCCESS=
+# PING_URL_WHEN_FAILURE=
+# PING_URL_CURL_OPTIONS=
+# PING_URL_WHEN_START_CURL_OPTIONS=
+# PING_URL_WHEN_SUCCESS_CURL_OPTIONS=
+# PING_URL_WHEN_FAILURE_CURL_OPTIONS=
+
+# === 邮件通知（可选）===
+# MAIL_SMTP_ENABLE=FALSE
+# MAIL_TO=you@example.com
+# MAIL_WHEN_SUCCESS=TRUE
+# MAIL_WHEN_FAILURE=TRUE
+# MAIL_FORCE_THREAD=FALSE
+# MAIL_SMTP_VARIABLES=-S smtp-use-starttls -S smtp=smtp://smtp.example.com:587 -S smtp-auth=login -S smtp-auth-user=you@example.com -S smtp-auth-password=yourpassword -S from=you@example.com
