--- a/rsshub/.env
+++ b/rsshub/.env
@@ -1,8 +1,9 @@
-NODE_ENV=production
-CACHE_TYPE=redis
-REDIS_URL=redis://redis:6379/
-PUPPETEER_WS_ENDPOINT=ws://browserless:3000
-
 # CUSTOM
 TZ=Asia/Shanghai
 SERV_PORT=1200
+
+NODE_ENV=production
+CACHE_TYPE=redis
+REDIS_URL=redis://redis:6379/
+PUPPETEER_WS_ENDPOINT=ws://browserless:3000 # marked
+PUPPETEER_REAL_BROWSER_SERVICE=http://real-browser:3000 # marked
