--- a/shortener/compose.yaml
+++ b/shortener/compose.yaml
@@ -4,27 +4,33 @@
 services:
   backend:
     image: jetsung/shortener-server:latest
-    restart: unless-stopped
+    container_name: shortener-server
     hostname: shortener
-    ports:
-      - 8081:8081
+    restart: unless-stopped
+    user: 0:0
     volumes:
-      - ./data:/app/data
-      - ./config:/app/config
+      - ./config.toml:/app/config.toml
     healthcheck:
       disable: true
-  #   depends_on:
-  #     - valkey
-
-  # valkey:
-  #   image: valkey/valkey:latest
-  #   restart: unless-stopped
-  #   environment:
-  #     - TZ=Asia/Shanghai
-
+    depends_on:
+      - valkey
   frontend:
     image: jetsung/shortener-frontend:latest
-    restart: unless-stopped
+    container_name: shortener-frontend
     hostname: shortener
+    restart: unless-stopped
+
+  valkey:
+    image: valkey/valkey:latest
+    hostname: valkey
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: shortener-nginx
+    hostname: shortener
+    restart: unless-stopped
     ports:
-      - 8080:8080
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
