--- a/simple-torrent/compose.override.yaml
+++ b/simple-torrent/compose.override.yaml
@@ -2,3 +2,6 @@ services:
   cloud-torrent:
     ports: !override
       - ${SERV_PORT:-3000}:3000
+    volumes:
+      - ./data/downloads:/downloads
+      - ./data/torrents:/torrents
