--- a/static-web-server/compose.override.yaml
+++ b/static-web-server/compose.override.yaml
@@ -2,3 +2,5 @@ services:
   static-web-server:
     ports: !override
       - ${SERV_PORT:-80}:80
+    volumes:
+      - ./data/downloads:/app/downloads
