--- a/swagger/compose.yaml
+++ b/swagger/compose.yaml
@@ -1,22 +1,25 @@
 ---
-# https://hub.docker.com/r/swaggerapi/swagger-ui
+# https://hub.docker.com/u/swaggerapi
 
 services:
   swagger-ui:
     image: swaggerapi/swagger-ui:latest
     container_name: swagger-ui
+    hostname: swagger
     restart: unless-stopped
     env_file:
       - path: ./.env
         required: false
     ports:
       - 8080:8080
+
   swagger-editor:
     image: swaggerapi/swagger-editor:latest
     container_name: swagger-editor
+    hostname: swagger
     restart: unless-stopped
     env_file:
       - path: ./.env
         required: false
     ports:
-      - 8081:8080
+      - 80:80
