--- a/vaultwarden-backup/compose.yaml
+++ b/vaultwarden-backup/compose.yaml
@@ -4,16 +4,17 @@
 x-backup-common: &backup-common
   image: ttionya/vaultwarden-backup:latest
   restart: unless-stopped
+  env_file:
+    - path: ./.env
+      required: false
   volumes:
     - ./data:/bitwarden/data/
     - ./data:/config/
 
 services       :
   backup1:
-    env_file:
-      - path: ./.env
-        required: false
     <<: *backup-common
+    container_name: vaultwarden-backup
 
 ## 多重备份
 #  backup2:
