--- a/vaultwarden/.env
+++ b/vaultwarden/.env
@@ -1,16 +1,23 @@
+# CUSTOM
+TZ=Asia/Shanghai
+SERV_PORT=80
+
 DOMAIN=https://vault.example.com # or https://vault.example.com/base-dir
 
 WEBSOCKET_ENABLED=true  # Enable WebSocket notifications.
 
-SMTP_HOST=<smtp.domain.tld>
-SMTP_FROM=<vaultwarden@domain.tld>
-SMTP_PORT=465 # 465, StartTLS(587)
-SMTP_SECURITY=off # 465 force_tls, 587/25 starttls, off
-SMTP_USERNAME=<username>
-SMTP_PASSWORD=<password>
+# SMTP_HOST=<smtp.domain.tld>
+# SMTP_FROM=<vaultwarden@domain.tld>
+# SMTP_PORT=465 # 465, StartTLS(587)
+# SMTP_SECURITY=off # 465 force_tls, 587/25 starttls, off
+# SMTP_USERNAME=<username>
+# SMTP_PASSWORD=<password>
 
-SIGNUPS_ALLOWED=false # registration disabled
+# SIGNUPS_ALLOWED=false # registration disabled
 
-# CUSTOM
-TZ=Asia/Shanghai
-SERV_PORT=80
+# https://github.com/dani-garcia/vaultwarden/wiki/Enabling-admin-page
+# ADMIN_TOKEN=
+
+# The email address to use for ACME registration.
+# EMAIL=
+# LOG_FILE=/data/access.log
