--- a/wingetty/compose.override.yaml
+++ b/wingetty/compose.override.yaml
@@ -2,3 +2,6 @@ services:
   wingetty:
     ports: !override
       - ${SERV_PORT:-8080}:8080
+    volumes:
+      - ./data/instance:/app/instance
+      - ./data/packages:/app/app/packages
