--- a/asciinema/compose.override.yaml
+++ b/asciinema/compose.override.yaml
@@ -6,7 +6,7 @@ services:
       - ./data/asciinema:/var/opt/asciinema
   postgres:
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql
 
   asciinema-local:
     extends:
