--- a/asciinema/compose.yaml
+++ b/asciinema/compose.yaml
@@ -18,8 +18,8 @@ services:
       postgres:
         condition: service_healthy
   postgres:
-    image: docker.io/library/postgres:16
-    hostname: asciinema
+    image: postgres:18
+    hostname: postgres
     restart: unless-stopped
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
