--- a/ferron/compose.override.yaml
+++ b/ferron/compose.override.yaml
@@ -1,7 +1,8 @@
 services:
   server:
     ports: !override
-      - ${HTTP_PORT:-8080}:80
+      - ${HTTP_PORT:-80}:80
+      - ${HTTPS_PORT:-443}:443
   ferron:
     ports: !override
       - ${HTTP_PORT:-80}:80
