feat: 添加 git-commit skill 及相关配置优化

--- a/gitlab/compose.override.yaml
+++ b/gitlab/compose.override.yaml
@@ -20,14 +20,15 @@ services:
         target: /omnibus_config.rb
     secrets:
       - gitlab_root_password
+
   gitlab-runner:
-    image: gitlab/gitlab-runner:alpine
-    deploy:
-      mode: replicated
-      replicas: 4
+    volumes:
+      - ./data/runner:/etc/gitlab-runner
+
 configs:
   gitlab:
     file: ./gitlab.rb
+
 secrets:
   gitlab_root_password:
     file: ./root_password.txt
