--- a/gitlab/compose.yaml
+++ b/gitlab/compose.yaml
@@ -14,3 +14,14 @@ services:
       - '22:22'
     restart: unless-stopped
     shm_size: '256m'
+
+  gitlab-runner:
+    container_name: gitlab-runner
+    hostname: gitlab-runner
+    image: gitlab/gitlab-runner:alpine
+    deploy:
+      mode: replicated
+      replicas: 4
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
