--- a/gitea/.env
+++ b/gitea/.env
@@ -3,20 +3,27 @@ TZ=Asia/Shanghai
 WEB_HTTP_PORT=80
 WEB_HTTPS_PORT=443
 
-# gitea
+# GITEA
+GITEA_HTTP_PORT=3000
+GITEA_SSL_PORT=22
+
 USER_UID=1000
 USER_GID=1000
-DB_TYPE=postgres
-DB_HOST=db:5432
-DB_NAME=gitea
-DB_USER=gitea
-DB_PASSWD=gitea
 
-# postgres
+GITEA__database__DB_TYPE=postgres
+GITEA__database__HOST=db:5432
+GITEA__database__NAME=gitea
+GITEA__database__USER=gitea
+GITEA__database__PASSWD=gitea
+
+# PostgreSQL
 POSTGRES_USER=gitea
 POSTGRES_PASSWORD=gitea
 POSTGRES_DB=gitea
 
-# inner setting
-GITEA_HTTP_PORT=3000
-GITEA_SSL_PORT=22
+# Runner
+CONFIG_FILE=/config.yaml
+GITEA_INSTANCE_URL=""
+GITEA_RUNNER_REGISTRATION_TOKEN=""
+GITEA_RUNNER_NAME=""
+GITEA_RUNNER_LABELS=""
