--- a/gitea/compose.override.yaml
+++ b/gitea/compose.override.yaml
@@ -1,21 +1,17 @@
 services:
-  server:
+  gitea:
     ports: !override
       - ${GITEA_HTTP_PORT:-3000}:3000
       - ${GITEA_SSL_PORT:-22}:22
     volumes:
       - ./data/gitea:/data
+      - ./data/.ssh:/data/git/.ssh
+
+  runner:
+    volumes:
+      - ./data/runner:/data
+      - ./data/postgres:/var/lib/postgresql
+
   db:
     volumes:
       - ./data/postgres:/var/lib/postgresql
-  caddy:
-    ports: !override
-      - ${WEB_HTTP_PORT:-80}:80
-      - ${WEB_HTTPS_PORT:-443}:443
-  nginx:
-    ports: !override
-      - ${WEB_HTTP_PORT:-80}:80
-      - ${WEB_HTTPS_PORT:-443}:443
-    volumes:
-      # - ./data/www:/var/www:cached
-      - ./data/ssl:/etc/nginx/ssl
