--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -1,7 +1,7 @@
 ---
 # https://hub.docker.com/r/gitea/gitea
 services:
-  server:
+  gitea:
     container_name: gitea
     depends_on:
       - db
@@ -17,6 +17,20 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+
+  runner:
+    depends_on:
+      - gitea
+    env_file:
+      - path: ./.env
+        required: false
+    hostname: gitea-runner
+    image: gitea/act_runner:nightly
+    restart: unless-stopped
+    volumes:
+      - ./config.yaml:/config.yaml
+      - /var/run/docker.sock:/var/run/docker.sock
+
   db:
     env_file:
       - path: ./.env
@@ -24,30 +38,3 @@ services:
     hostname: postgres
     image: postgres:18
     restart: unless-stopped
-  caddy:
-    depends_on:
-      - server
-    hostname: caddy
-    image: caddy:latest
-    ports:
-      - 80:80
-      - 443:443
-    profiles:
-      - caddy
-    restart: unless-stopped
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-  nginx:
-    command: nginx
-    depends_on:
-      - server
-    hostname: nginx
-    image: nginx:alpine
-    ports:
-      - 80:80
-      - 443:443
-    profiles:
-      - nginx
-    restart: unless-stopped
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
