refactor(gitea): 重构配置并移除代理服务器支持
- 移除 run.sh 一键安装脚本及相关代理服务器配置
- 更新 Gitea Runner 配置，添加实例 URL、runner 名称和标签
- 优化 README 文档，移除过时的安装方式，补充环境变量说明
- 简化 GitLab Runner 配置，移除部署伸缩配置

--- a/gitea/.env
+++ b/gitea/.env
@@ -23,7 +23,10 @@ POSTGRES_DB=gitea
 
 # Runner
 CONFIG_FILE=/config.yaml
-GITEA_INSTANCE_URL=""
+# 使用完整的 Gitea 实例 URL，例如：http://gitea.example.com/
+GITEA_INSTANCE_URL=http://gitea.example.com/
+# 若 GITEA_RUNNER_REGISTRATION_TOKEN 与 GITEA_RUNNER_REGISTRATION_TOKEN_FILE 同时设置时，优先使用 GITEA_RUNNER_REGISTRATION_TOKEN
 GITEA_RUNNER_REGISTRATION_TOKEN=""
-GITEA_RUNNER_NAME=""
-GITEA_RUNNER_LABELS=""
+# GITEA_RUNNER_REGISTRATION_TOKEN_FILE=/runner-token
+GITEA_RUNNER_NAME="gitea-runner"
+GITEA_RUNNER_LABELS="self-hosted,linux,amd64"
