--- a/opengist/.env
+++ b/opengist/.env
@@ -3,6 +3,9 @@ TZ=Asia/Shanghai
 SERV_PORT=6157
 SSH_PORT=2222
 
+UID=1001
+GID=1001
+
 # https://opengist.io/docs/configuration/cheat-sheet.html
 # OG_LOG_LEVEL=warn
 # OG_LOG_OUTPUT=stdout,file
@@ -10,6 +13,7 @@ SSH_PORT=2222
 # OG_OPENGIST_HOME=home directory
 # OG_SECRET_KEY=randomized 32 bytes
 OG_DB_URI=opengist.db
+# 定义代码索引器（bleve、meilisearch 或空，表示无索引）
 # OG_INDEX=bleve
 # OG_MEILI_HOST=none
 # OG_MEILI_API_KEY=none
