feat(litellm): 添加 LiteLLM 服务配置及相关文档
更新 Docker 镜像源，添加 drop_params 配置，完善配置文件和文档说明

--- a/litellm/compose.yaml
+++ b/litellm/compose.yaml
@@ -15,16 +15,16 @@ services:
       timeout: 10s   # Health check command times out after 10 seconds
       retries: 3     # Retry up to 3 times if health check fails
       start_period: 40s  # Wait 40 seconds after container start before beginning health checks
-    image: docker.litellm.ai/berriai/litellm:main-stable
+    image: ghcr.io/berriai/litellm:main-stable
     ports:
       - 4000:4000
     restart: unless-stopped
     #########################################
     ## Uncomment these lines to start proxy with a config.yaml file ##
-    # volumes:
-    #  - ./config.yaml:/app/config.yaml
-    # command:
-    #  - "--config=/app/config.yaml"
+    volumes:
+     - ./config.yaml:/app/config.yaml
+    command:
+     - "--config=/app/config.yaml"
     ##############################################
 
   db:
@@ -41,12 +41,13 @@ services:
 
   prometheus:
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--config.file=/etc/prometheus/prometheus.yaml"
       - "--storage.tsdb.path=/prometheus"
       - "--storage.tsdb.retention.time=15d"
     image: prom/prometheus
     ports:
       - "9090:9090"
     restart: unless-stopped
+    user: "0:0"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
