feat(litellm): 更新配置文件添加UI登录凭证及相关文档

--- a/litellm/.env
+++ b/litellm/.env
@@ -30,17 +30,29 @@ NOVITA_API_KEY = ""
 INFINITY_API_KEY = ""
 
 # Development Configs
-# must start with sk-
-LITELLM_MASTER_KEY = "sk-1234"
-DATABASE_URL = "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
-# allows adding models to proxy via UI
-STORE_MODEL_IN_DB = "True"
-
 # Add the litellm salt key - you cannot change this after adding a model
 # It is used to encrypt / decrypt your LLM API Key credentials
 # We recommend - https://1password.com/password-generator/
 # password generator to get a random hash for litellm salt key
 # LITELLM_SALT_KEY="sk-1234"
+# must start with sk-
+LITELLM_MASTER_KEY = "sk-1234"
+
+# ui login credentials
+UI_USERNAME=ishaan-litellm   # username to sign in on UI
+UI_PASSWORD=langchain        # password to sign in on UI
+
+# set to True to disable admin interface
+# DISABLE_ADMIN_UI="True"
+
+DATABASE_URL = "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
+# allows adding models to proxy via UI
+STORE_MODEL_IN_DB = "True"
+
+# set to True to enable proxy mode
+# PROXY_BASE_URL=https://litellm-api.up.railway.app
+
+# ALLOWED_EMAIL_DOMAINS="berri.ai"
 
 # PostgreSQL Configs
 POSTGRES_DB=litellm
