feat(litellm): 更新配置文件添加UI登录凭证及相关文档

--- a/litellm/.env
+++ b/litellm/.env
@@ -49,11 +49,25 @@ DATABASE_URL = "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
 # allows adding models to proxy via UI
 STORE_MODEL_IN_DB = "True"
 
+LITELLM_PROXY_URL=https://litellm-api.up.railway.app
+
 # set to True to enable proxy mode
 # PROXY_BASE_URL=https://litellm-api.up.railway.app
 
 # ALLOWED_EMAIL_DOMAINS="berri.ai"
 
+# 忽略不支持的参数
+LITELLM_DROP_PARAMS=True
+
+# 设置邮箱
+# SMTP_HOST="smtp.resend.com"
+# SMTP_TLS="True"
+# SMTP_PORT="587"
+# SMTP_USERNAME="resend"
+# SMTP_SENDER_EMAIL="notifications@alerts.litellm.ai"
+# SMTP_PASSWORD="xxxxx"
+
+#############################################
 # PostgreSQL Configs
 POSTGRES_DB=litellm
 POSTGRES_USER=llmproxy
