--- a/litellm/.env
+++ b/litellm/.env
@@ -2,33 +2,6 @@
 TZ=Asia/Shanghai
 SERV_PORT=4000
 
-# OpenAI
-OPENAI_API_KEY = ""
-OPENAI_BASE_URL = ""
-# Cohere
-COHERE_API_KEY = ""
-# OpenRouter
-OR_SITE_URL = ""
-OR_APP_NAME = "LiteLLM Example app"
-OR_API_KEY = ""
-# Azure API base URL
-AZURE_API_BASE = ""
-# Azure API version
-AZURE_API_VERSION = ""
-# Azure API key
-AZURE_API_KEY = ""
-# Replicate
-REPLICATE_API_KEY = ""
-REPLICATE_API_TOKEN = ""
-# Anthropic
-ANTHROPIC_API_KEY = ""
-# Infisical
-INFISICAL_TOKEN = ""
-# Novita AI
-NOVITA_API_KEY = ""
-# INFINITY
-INFINITY_API_KEY = ""
-
 # Development Configs
 # Add the litellm salt key - you cannot change this after adding a model
 # It is used to encrypt / decrypt your LLM API Key credentials
@@ -36,7 +9,7 @@ INFINITY_API_KEY = ""
 # password generator to get a random hash for litellm salt key
 # LITELLM_SALT_KEY="sk-1234"
 # must start with sk-
-LITELLM_MASTER_KEY = "sk-1234"
+LITELLM_MASTER_KEY="sk-1234"
 
 # ui login credentials
 UI_USERNAME=ishaan-litellm   # username to sign in on UI
@@ -45,11 +18,13 @@ UI_PASSWORD=langchain        # password to sign in on UI
 # set to True to disable admin interface
 # DISABLE_ADMIN_UI="True"
 
-DATABASE_URL = "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
-# allows adding models to proxy via UI
-STORE_MODEL_IN_DB = "True"
+DATABASE_URL="postgresql://llmproxy:dbpassword9090@db:5432/litellm"
 
-LITELLM_PROXY_URL=https://litellm-api.up.railway.app
+# allows adding models to proxy via UI
+STORE_MODEL_IN_DB="True"
+
+# 后台 demo 调用时使用的代理 URL
+# LITELLM_PROXY_URL=https://litellm-api.up.railway.app
 
 # set to True to enable proxy mode
 # PROXY_BASE_URL=https://litellm-api.up.railway.app
