--- a/litellm/config.yaml
+++ b/litellm/config.yaml
@@ -1,2 +1,5 @@
 litellm_settings:
   drop_params: true          # 全局生效，所有模型自动丢弃不支持的参数
+  # 修复 https://docs.litellm.ai/docs/proxy/prometheus
+  callbacks:
+    - prometheus
