feat(arcane): 添加健康检查配置以监控服务状态
- 添加健康检查端点检测，间隔10秒，超时3秒，重试5次
- 优化卷挂载配置，添加注释说明

feat(gitea): 配置默认仓库单元和SSH域名

- 禁用Actions功能以减少资源占用
- 添加SSH域名配置支持CDN环境
- 更新环境变量和文档说明

docs(gitea): 完善配置文档和使用说明

- 添加SSH_DOMAIN配置说明
- 详细说明DEFAULT_REPO_UNITS配置选项
- 补充app.ini配置示例

--- a/arcane/compose.yaml
+++ b/arcane/compose.yaml
@@ -7,6 +7,12 @@ services:
       - path: ./.env
         required: false
     hostname: arcane
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -fsS http://localhost:3552/api/health >/dev/null || exit 1']
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 15s
     image: ghcr.io/getarcaneapp/arcane:latest
     ports:
       - 3552:3552
