--- a/gitea/.env
+++ b/gitea/.env
@@ -10,6 +10,9 @@ GITEA_SSL_PORT=22
 USER_UID=1000
 USER_GID=1000
 
+# 去掉 repo.actions，则默认不启用 Actions
+GITEA__repository__DEFAULT_REPO_UNITS=repo.code,repo.releases,repo.issues,repo.pulls,repo.wiki,repo.projects,repo.packages
+
 GITEA__database__DB_TYPE=postgres
 GITEA__database__HOST=db:5432
 GITEA__database__NAME=gitea
