--- a/arcane/compose.override.yaml
+++ b/arcane/compose.override.yaml
@@ -4,5 +4,6 @@ services:
     ports: !override
       - ${SERV_PORT:-3552}:3552
     volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
       - ./data:/app/data
+      # - /opt/docker:/opt/docker:ro
