--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -75,31 +75,31 @@ jobs:
       # - uses: actions/deploy-pages@v4
       #   id: deployment
 
-  # deploy-ssh-server:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Download build artifacts
-  #       uses: actions/download-artifact@v7
-  #       with:
-  #         name: docs-site
-  #         path: ./public
-  #     - name: Compress to tar.xz
-  #       run: |
-  #         tar -cJf docs-site.tar.xz public/
-  #     - name: Set up SSH
-  #       uses: LuisEnMarroquin/setup-ssh-action@v3.0.0
-  #       with:
-  #         ORIGIN: ${{ secrets.SSH_HOSTNAME }}
-  #         SSHKEY: ${{ secrets.SSH_KEY }}
-  #         NAME: webserver
-  #         PORT: ${{ secrets.SSH_PORT }}
-  #         USER: ${{ secrets.SSH_USERNAME }}
-  #     - run: echo "" >> ~/.ssh/access  # fix
-  #     - name: Deploy the website
-  #       env:
-  #         WEBROOT: /data/wwwroot/docker-compose-docs
-  #       run: |
-  #         ssh webserver "rm -rf $WEBROOT && mkdir -p $WEBROOT"
-  #         scp docs-site.tar.xz webserver:${WEBROOT}/
-  #         ssh webserver "cd $WEBROOT && tar -xJf docs-site.tar.xz --strip-components=1 && rm -f docs-site.tar.xz"
+  deploy-ssh-server:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v7
+        with:
+          name: docs-site
+          path: ./public
+      - name: Compress to tar.xz
+        run: |
+          tar -cJf docs-site.tar.xz public/
+      - name: Set up SSH
+        uses: LuisEnMarroquin/setup-ssh-action@v3.0.0
+        with:
+          ORIGIN: ${{ secrets.SSH_HOSTNAME }}
+          SSHKEY: ${{ secrets.SSH_KEY }}
+          NAME: webserver
+          PORT: ${{ secrets.SSH_PORT }}
+          USER: ${{ secrets.SSH_USERNAME }}
+      - run: echo "" >> ~/.ssh/access  # fix
+      - name: Deploy the website
+        env:
+          WEBROOT: /data/wwwroot/compose
+        run: |
+          ssh webserver "rm -rf $WEBROOT && mkdir -p $WEBROOT"
+          scp docs-site.tar.xz webserver:${WEBROOT}/
+          ssh webserver "cd $WEBROOT && tar -xJf docs-site.tar.xz --strip-components=1 && rm -f docs-site.tar.xz"
