feat(docs): 更新部署配置和文档链接
- 在 GitHub Pages 部署工作流中添加 registry.json 和 schema.json 文件的复制
- 在 README 中添加 Arcane Registry 的访问链接

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build with VitePress
         run: npm run docs:build
       - name: Copy CNAME
-        run: cp CNAME .vitepress/dist/
+        run: cp {CNAME,registry.json,schema.json} .vitepress/dist/
       - name: Upload build artifacts
         uses: actions/upload-artifact@v6
         with:
