--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - '.github/workflows/docs.yml'
+      - 'registry.json'
       - '**/README.md'
       - '**/compose.yaml'
       - '**/compose.override.yaml'
