feat(logto): 添加 Logto 认证基础设施服务
- 添加 Logto 服务完整配置，包括 compose.yaml 和 compose.override.yaml
- 配置 PostgreSQL 数据库依赖和健康检查
- 添加环境变量配置文件和详细使用说明
- 更新 README.md 服务列表，按字母顺序添加 logto 条目
- 优化 headscale 配置，添加 OIDC 第三方登录支持
- 更新 postgres 服务健康检查配置
- 完善 vaultwarden U2F/WebAuthn 认证配置说明

--- a/headscale/.env
+++ b/headscale/.env
@@ -17,3 +17,14 @@ HEADPLANE_SERVER__COOKIE_SECURE=false
 
 # headscale 服务
 HEADPLANE_HEADSCALE__URL=http://headscale:8080
+
+# # OIDC
+# HEADPLANE_OIDC__HEADSCALE_API_KEY=<generated-api-key>
+# HEADPLANE_OIDC__ISSUER=https://your-idp.com
+# HEADPLANE_OIDC__CLIENT_ID=your-client-id
+# HEADPLANE_OIDC__CLIENT_SECRET=your-client-secret
+# HEADPLANE_OIDC__TOKEN_ENDPOINT_AUTH_METHOD=client_secret_basic
+# HEADPLANE_OIDC__SCOPE=openid email profile
+
+# 如果使用 OIDC，可以禁用 API Key 登录
+HEADPLANE_OIDC__DISABLE_API_KEY_LOGIN=true
