--- a/vaultwarden/.env
+++ b/vaultwarden/.env
@@ -21,3 +21,7 @@ WEBSOCKET_ENABLED=true  # Enable WebSocket notifications.
 # The email address to use for ACME registration.
 # EMAIL=
 # LOG_FILE=/data/access.log
+
+# 启用 U2F（及 FIDO2 WebAuthn）认证
+# https://github.com/dani-garcia/vaultwarden/wiki/Enabling-U2F-%28and-FIDO2-WebAuthn%29-authentication
+# DOMAIN=https://vault.example.com
