--- a/headscale/compose.yaml
+++ b/headscale/compose.yaml
@@ -13,7 +13,7 @@ services:
         test: ["CMD", "headscale", "health"]
     labels:
       # This label is absolutely necessary to help Headplane find Headscale.
-      me.tale.headplane.target: headscale
+      - me.tale.headplane.target=headscale
     image: headscale/headscale:latest
     ports:
       - "8080:8080"
@@ -26,18 +26,13 @@ services:
       - ./config/headscale.yaml:/etc/headscale/config.yaml
       - ./data/headscale:/var/lib/headscale
 
+# https://ghcr.io/tale/headplane
   headplane:
     container_name: headplane
     env_file:
       - path: ./.env
         required: false
     hostname: headplane
-    healthcheck:
-      test: ["CMD", "/bin/hp_healthcheck"]
-      interval: 30s
-      timeout: 5s
-      start_period: 5s
-      retries: 3
     image: ghcr.io/tale/headplane:latest
     ports:
       - "3000:3000"
