feat(authelia): 新增 Authelia 服务并更新相关配置

--- a/headscale/.env
+++ b/headscale/.env
@@ -4,6 +4,49 @@ HEADSCALE_PORT=8080
 METRICS_PORT=9090
 HEADPLANE_PORT=3000
 
+
+# Headscale 配置 ##################################
+# https://github.com/juanfont/headscale/blob/main/integration/hsic/config.go#L24
+## 日志级别，可选：debug / info / warn / error / trace
+HEADSCALE_LOG_LEVEL=trace
+
+# 自定义策略文件路径（ACL 配置），留空表示默认
+# HEADSCALE_POLICY_PATH=
+
+# 数据库类型，可选：sqlite / postgres / mysql
+HEADSCALE_DATABASE_TYPE=sqlite
+
+# SQLite 数据库文件路径（仅 sqlite 时有效）
+HEADSCALE_DATABASE_SQLITE_PATH=/var/lib/headscale/db.sqlite
+
+# 数据库调试开关，0=关闭，1=开启
+# HEADSCALE_DATABASE_DEBUG=0
+
+# GORM 慢查询阈值（秒），超过该值会记录慢查询
+# HEADSCALE_DATABASE_GORM_SLOW_THRESHOLD=1000
+
+# 临时节点（Ephemeral Node）闲置超时时间，超过该时间节点将被移除
+# HEADSCALE_EPHEMERAL_NODE_INACTIVITY_TIMEOUT=30m
+
+# 分配给 Headscale / Tailscale 节点的 IPv4 网段（通常是 100.64.0.0/10）
+# HEADSCALE_PREFIXES_V4=100.64.0.0/10
+
+# 分配给 Headscale / Tailscale 节点的 IPv6 网段
+# HEADSCALE_PREFIXES_V6=fd7a:115c:a1e0::/48
+
+# MagicDNS 的基础域名（所有节点 hostname 将解析到此域名下）
+# HEADSCALE_DNS_BASE_DOMAIN=headscale.net
+
+# 是否启用 MagicDNS（自动解析节点 hostname）
+HEADSCALE_DNS_MAGIC_DNS=true
+
+# 是否覆盖本地 DNS，false 表示本地 DNS 请求仍会正常解析
+# HEADSCALE_DNS_OVERRIDE_LOCAL_DNS=false
+
+# 全局 DNS 服务器列表（空格分隔）
+# HEADSCALE_DNS_NAMESERVERS_GLOBAL=127.0.0.11 1.1.1.1
+
+
 # Headplane 配置 ##################################
 # 使用 .env 覆盖
 HEADPLANE_LOAD_ENV_OVERRIDES=true
