--- a/tailscale/.env
+++ b/tailscale/.env
@@ -9,7 +9,8 @@ TZ=Asia/Shanghai
 
 # 是否接受管理控制台推送的 DNS 配置
 # 默认不接受
-TS_ACCEPT_DNS=false
+# 推荐接受，以便使用 MagicDNS 等功能
+TS_ACCEPT_DNS=true
 
 # 是否只在未登录时尝试登录一次
 # 默认 false（容器每次启动都强制重新认证）
