--- a/headscale/.env
+++ b/headscale/.env
@@ -5,49 +5,44 @@ METRICS_PORT=9090
 HEADPLANE_PORT=3000
 
 
-# Headscale 配置 ##################################
-# https://github.com/juanfont/headscale/blob/main/integration/hsic/config.go#L24
-## 日志级别，可选：debug / info / warn / error / trace
+############## Headscale 配置 START ##############################
+# Headscale服务的URL地址
+HEADSCALE_SERVER_URL=http://0.0.0.0:8080
+# Headscale服务的监听地址
+HEADSCALE_LISTEN_ADDR=0.0.0.0:8080
+# Headscale的DERP配置文件路径
+HEADSCALE_DERP_PATHS=/etc/headscale/derp.yaml
+
+# 日志级别，可选：debug / info / warn / error / trace
 HEADSCALE_LOG_LEVEL=trace
-
-# 自定义策略文件路径（ACL 配置），留空表示默认
-# HEADSCALE_POLICY_PATH=
-
 # 数据库类型，可选：sqlite / postgres / mysql
 HEADSCALE_DATABASE_TYPE=sqlite
-
 # SQLite 数据库文件路径（仅 sqlite 时有效）
 HEADSCALE_DATABASE_SQLITE_PATH=/var/lib/headscale/db.sqlite
-
 # 数据库调试开关，0=关闭，1=开启
 # HEADSCALE_DATABASE_DEBUG=0
-
-# GORM 慢查询阈值（秒），超过该值会记录慢查询
-# HEADSCALE_DATABASE_GORM_SLOW_THRESHOLD=1000
-
-# 临时节点（Ephemeral Node）闲置超时时间，超过该时间节点将被移除
-# HEADSCALE_EPHEMERAL_NODE_INACTIVITY_TIMEOUT=30m
-
 # 分配给 Headscale / Tailscale 节点的 IPv4 网段（通常是 100.64.0.0/10）
 # HEADSCALE_PREFIXES_V4=100.64.0.0/10
-
 # 分配给 Headscale / Tailscale 节点的 IPv6 网段
 # HEADSCALE_PREFIXES_V6=fd7a:115c:a1e0::/48
-
 # MagicDNS 的基础域名（所有节点 hostname 将解析到此域名下）
-# HEADSCALE_DNS_BASE_DOMAIN=headscale.net
-
+HEADSCALE_DNS_BASE_DOMAIN=headscale.net
 # 是否启用 MagicDNS（自动解析节点 hostname）
 HEADSCALE_DNS_MAGIC_DNS=true
-
 # 是否覆盖本地 DNS，false 表示本地 DNS 请求仍会正常解析
 # HEADSCALE_DNS_OVERRIDE_LOCAL_DNS=false
+# Prometheus 兼容的 metrics 监听地址
+HEADSCALE_METRICS_LISTEN_ADDR=0.0.0.0:9090
+# DERP 服务器 URL，用于跨 NAT / 公网节点中继
+HEADSCALE_DERP_URLS=https://controlplane.tailscale.com/derpmap/default
+# 是否允许自动更新 DERP 地图
+HEADSCALE_DERP_AUTO_UPDATE_ENABLED=false
 
-# 全局 DNS 服务器列表（空格分隔）
-# HEADSCALE_DNS_NAMESERVERS_GLOBAL=127.0.0.11 1.1.1.1
+############## Headscale 配置 END ################################
+#################################################################
 
 
-# Headplane 配置 ##################################
+# Headplane 配置 ################################################
 # 使用 .env 覆盖
 HEADPLANE_LOAD_ENV_OVERRIDES=true
 
