docs(atuin): 添加初始化说明和启动命令配置

--- a/atuin/compose.yaml
+++ b/atuin/compose.yaml
@@ -2,6 +2,8 @@
 # https://github.com/atuinsh/atuin/pkgs/container/atuin
 services:
   atuin:
+    command:
+      - start  
     container_name: atuin
     env_file:
       - path: ./.env
