feat(forgejo): 添加 Forgejo Git 托管平台服务配置

--- a/gitea/.env
+++ b/gitea/.env
@@ -1,17 +1,10 @@
 # CUSTOM
 TZ=Asia/Shanghai
-WEB_HTTP_PORT=80
-WEB_HTTPS_PORT=443
-
-# GITEA
-GITEA_HTTP_PORT=3000
-GITEA_SSL_PORT=22
+GIT_HTTP_PORT=3000
+GIT_SSL_PORT=2222
 
 USER_UID=1000
 USER_GID=1000
-
-# 去掉 repo.actions，则默认不启用 Actions
-GITEA__repository__DEFAULT_REPO_UNITS=repo.code,repo.releases,repo.issues,repo.pulls,repo.wiki,repo.projects,repo.packages
 
 GITEA__database__DB_TYPE=postgres
 GITEA__database__HOST=db:5432
@@ -19,15 +12,18 @@ GITEA__database__NAME=gitea
 GITEA__database__USER=gitea
 GITEA__database__PASSWD=gitea
 
-# PostgreSQL
+# 去掉 repo.actions，则默认不启用 Actions
+GITEA__repository__DEFAULT_REPO_UNITS=repo.code,repo.releases,repo.issues,repo.pulls,repo.wiki,repo.projects,repo.packages
+
+####################################### PostgreSQL #######################################
 POSTGRES_USER=gitea
 POSTGRES_PASSWORD=gitea
 POSTGRES_DB=gitea
 
-# Runner
+################################# Runner #######################################
 CONFIG_FILE=/config.yaml
-# 使用完整的 Gitea 实例 URL，例如：http://gitea.example.com/
-GITEA_INSTANCE_URL=http://gitea.example.com/
+# 使用完整的 Gitea 实例 URL，例如：http://runner.example.com/
+GITEA_INSTANCE_URL=http://runner.example.com/
 # 若 GITEA_RUNNER_REGISTRATION_TOKEN 与 GITEA_RUNNER_REGISTRATION_TOKEN_FILE 同时设置时，优先使用 GITEA_RUNNER_REGISTRATION_TOKEN
 GITEA_RUNNER_REGISTRATION_TOKEN=""
 # GITEA_RUNNER_REGISTRATION_TOKEN_FILE=/runner-token
