--- a/forgejo/compose.override.yaml
+++ b/forgejo/compose.override.yaml
@@ -1,10 +1,11 @@
+---
 services:
-  gitea:
+  forgejo:
     ports: !override
       - ${GIT_HTTP_PORT:-3000}:3000
       - ${GIT_SSL_PORT:-22}:22
     volumes:
-      - ./data/gitea:/data
+      - ./data/forgejo:/data
       - ./data/.ssh:/data/git/.ssh
 
   runner:
